--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "minimist": "^1.2.0",
     "nanolru": "^1.0.0",
     "prettier": "^2.1.0",
-    "resolve": "^1.8.1"
+    "resolve": "^1.8.1",
+    "@types/minimist": "^1.2.0",
+    "@types/prettier": "^2.0.2"
   },
   "files": [
     "bin",
@@ -40,9 +42,7 @@
   "devDependencies": {
     "@studio/changes": "^2.0.1",
     "@studio/eslint-config": "^1.0.2",
-    "@types/minimist": "^1.2.0",
     "@types/node": "^14.6.0",
-    "@types/prettier": "^2.0.2",
     "@types/resolve": "^1.17.1",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
