--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "lint": "eslint . --ignore-pattern '**/node_modules/**'",
     "posttest": "npm run lint",
-    "install": "tsc --project tsconfig.json",
+    "prepublish": "tsc --project tsconfig.json",
     "preversion": "npm test",
     "version": "changes --commits --footer",
     "postversion": "git push --follow-tags && npm publish"
