--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "homepage": "https://github.com/mikew/prettier_d",
   "scripts": {
     "lint": "eslint . --ignore-pattern '**/node_modules/**'",
-    "posttest": "npm run lint",
-    "prepublish": "tsc --project tsconfig.json",
-    "preversion": "npm test",
+    "prepare": "tsc --project tsconfig.json",
     "version": "changes --commits --footer",
     "postversion": "git push --follow-tags && npm publish"
   },
