--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prettier": "^2.1.0",
     "resolve": "^1.8.1",
     "@types/minimist": "^1.2.0",
-    "@types/prettier": "^2.0.2"
+    "@types/prettier": "^2.0.2",
+    "typescript": "^4.0.2"
   },
   "files": [
     "bin",
@@ -46,7 +47,6 @@
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-simple-import-sort": "^5.0.0",
-    "typescript": "^4.0.2"
+    "eslint-plugin-simple-import-sort": "^5.0.0"
   }
 }
